# mixed_layer_cesm

./: .gitignore  LICENSE  README.md  mld_output.npz  pyproject.toml
examples/: California Coast Example  Drake Passage Example  Drake Passage Example.txt  grab_TEMP.py  grab_trefht.py  list_all_variables.py
mixed_layer_cesm/: Test_functions.ipynb  __init__.py  calculate.py  cli.py  core.py  plot.py  test_file.ipynb
mixed_layer_cesm/data_cache/: mld_results.npz
