[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mixed_layer_cesm"
version = "0.1.0"
description = "Mixed Layer Depth computation tools"
dependencies = [
    "numpy",
    "xarray",
    "scipy",
    "gsw"
]

[project.scripts]
mld-cli = "mixed_layer_cesm.cli:main"
