[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mixed_layer_cesm"
version = "0.1.0"
description = "Mixed Layer Depth computation tools"
dependencies = [
    "numpy",
    "xarray>=2022.6",
    "scipy",
    "gsw",
    "cftime",
    "zarr",
    "s3fs>=2026.3.0",
    "matplotlib"
]

[project.scripts]
mld-cli = "mixed_layer_cesm.cli:main"

